# exif-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NEWS  README  README.md
examples/: dumpexif.rs  reading.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_exif.rs  read_from_container.rs
src/: crx.rs  doc.rs  endian.rs  error.rs  exifimpl.rs  image.rs  isobmff.rs  jpeg.rs  lib.rs  png.rs  reader.rs  tag.rs  tiff.rs  tmacro.rs  util.rs  value.rs  webp.rs  writer.rs
tests/: exif.bif  exif.heic  exif.tif  platform.rs  rwrcmp.rs  unit.tif  yaminabe.tif  yaminale.tif
