[package]
name = "exif"
version = "0.2.3"
authors = ["KAMADA Ken'ichi <kamada@nanohz.org>"]

description = "Exif parsing library written in pure Rust"
documentation = "https://docs.rs/kamadak-exif"
homepage = "https://github.com/kamadak/exif-rs"
repository = "https://github.com/kamadak/exif-rs"
readme = "README"
keywords = ["Exif", "JPEG", "parser", "reader", "TIFF"]
categories = ["multimedia::encoding", "parser-implementations"]
license = "BSD-2-Clause"
