[package]
name = "exif"
version = "0.3.1"
authors = ["KAMADA Ken'ichi <kamada@nanohz.org>"]
edition = "2018"

description = "Exif parsing library written in pure Rust"
documentation = "https://docs.rs/kamadak-exif"
homepage = "https://github.com/kamadak/exif-rs"
repository = "https://github.com/kamadak/exif-rs"
readme = "README"
keywords = ["Exif", "JPEG", "parser", "reader", "TIFF"]
categories = ["multimedia::encoding", "parser-implementations"]
license = "BSD-2-Clause"

[dependencies]
mutate_once = "0.1.1"
