[package]
name = "exif-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.exif]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse_exif"
path = "fuzz_targets/parse_exif.rs"
test = false
doc = false


[[bin]]
name = "read_from_container"
path = "fuzz_targets/read_from_container.rs"
test = false
doc = false
